jp Data as init and final

--- a/iiwa_tesla/iiwa_tesla_data/joint_pos_vel_data.ipynb
+++ b/iiwa_tesla/iiwa_tesla_data/joint_pos_vel_data.ipynb
@@ -862,7 +862,7 @@
    "outputs": [],
    "source": [
     "joint_positions['mtc_init'] = get_initial_joint_position(jpm1_10, min(mtc, key=lambda t:t[0])[1]).to_list()\n",
-    "joint_positions['mtv_final'] = get_final_joint_position(jpm1_10, min(mtc, key=lambda t:t[0])[1]).to_list()"
+    "joint_positions['mtc_final'] = get_final_joint_position(jpm1_10, min(mtc, key=lambda t:t[0])[1]).to_list()"
    ]
   },
   {
