--- a/iiwa_tesla/iiwa_tesla_data/joint_pos_vel_data.ipynb
+++ b/iiwa_tesla/iiwa_tesla_data/joint_pos_vel_data.ipynb
@@ -1552,7 +1552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.13 | packaged by conda-forge | (default, Mar 25 2022, 05:56:18) \n[GCC 10.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
