final commit for project2

--- a/iiwa_tesla/iiwa_tesla_data/joint_pos_vel_data.ipynb
+++ b/iiwa_tesla/iiwa_tesla_data/joint_pos_vel_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,22 +986,377 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.00010141565654038151, 728)"
+       "[(2.0936213041440443, 0),\n",
+       " (1.763219662558546, 1),\n",
+       " (1.4489391609468074, 2),\n",
+       " (1.661725668211051, 3),\n",
+       " (1.5531143083699814, 4),\n",
+       " (1.7645026894180447, 5),\n",
+       " (1.6950211846435652, 6),\n",
+       " (1.6945191981128482, 7),\n",
+       " (1.5599691297541634, 8),\n",
+       " (1.4823325340882256, 9),\n",
+       " (1.6757983674718648, 10),\n",
+       " (1.6278415555861712, 11),\n",
+       " (1.3426386541632667, 12),\n",
+       " (1.3798451010925288, 13),\n",
+       " (1.228942479397358, 14),\n",
+       " (1.7615871395469291, 15),\n",
+       " (1.6273517171337204, 16),\n",
+       " (1.8961572035788687, 17),\n",
+       " (1.8408868487327774, 18),\n",
+       " (1.7870355578955532, 19),\n",
+       " (1.885274411409939, 20),\n",
+       " (2.05034609954236, 21),\n",
+       " (1.4784400406117033, 22),\n",
+       " (1.825415274506531, 23),\n",
+       " (2.0541359821801706, 24),\n",
+       " (1.348474645162291, 25),\n",
+       " (1.3304982636972145, 26),\n",
+       " (1.6770619614010327, 27),\n",
+       " (1.9342809447940132, 28),\n",
+       " (1.5768444062918885, 29),\n",
+       " (1.6119577006011652, 30),\n",
+       " (1.62683312143945, 31),\n",
+       " (1.458120431521922, 32),\n",
+       " (1.5152072310609066, 33),\n",
+       " (1.4113810306738286, 34),\n",
+       " (2.1073380397898265, 35),\n",
+       " (1.6099324132863517, 36),\n",
+       " (1.8810970687076172, 37),\n",
+       " (1.705283864216716, 38),\n",
+       " (1.6255146222230286, 39),\n",
+       " (1.521147927568436, 40),\n",
+       " (1.7630342716457186, 41),\n",
+       " (1.6277040460543377, 42),\n",
+       " (2.0230815289393824, 43),\n",
+       " (1.7096516613345596, 44),\n",
+       " (1.9368309187377664, 45),\n",
+       " (1.41811753512316, 46),\n",
+       " (1.795385113733967, 47),\n",
+       " (1.5985277984143846, 48),\n",
+       " (1.511100179693683, 49),\n",
+       " (1.8578084371741612, 50),\n",
+       " (1.712839305087077, 51),\n",
+       " (1.730993675328555, 52),\n",
+       " (1.7009708943964632, 53),\n",
+       " (1.4664899007001826, 54),\n",
+       " (1.5867482751427793, 55),\n",
+       " (1.6286055833791846, 56),\n",
+       " (1.3476912121590723, 57),\n",
+       " (1.5970338549670198, 58),\n",
+       " (1.4949062253530494, 59),\n",
+       " (1.432943147112914, 60),\n",
+       " (1.3057164840265363, 61),\n",
+       " (1.525237402306593, 62),\n",
+       " (1.6600954607953071, 63),\n",
+       " (1.4616735324862844, 64),\n",
+       " (1.5236805592839555, 65),\n",
+       " (1.3194344610429944, 66),\n",
+       " (1.440037617553809, 67),\n",
+       " (1.867656047694222, 68),\n",
+       " (1.8049957464895476, 69),\n",
+       " (1.7689333133475749, 70),\n",
+       " (1.6239348126534445, 71),\n",
+       " (1.3389915798235419, 72),\n",
+       " (1.7498050861012453, 73),\n",
+       " (1.9353584386362297, 74),\n",
+       " (1.597155149228693, 75),\n",
+       " (1.3408926937000871, 76),\n",
+       " (1.9645125531098955, 77),\n",
+       " (1.4373718246006426, 78),\n",
+       " (1.9090393966502437, 79),\n",
+       " (1.8234882978130478, 80),\n",
+       " (1.6198921811216698, 81),\n",
+       " (1.5907868736288837, 82),\n",
+       " (1.373873165153023, 83),\n",
+       " (1.2321358295760032, 84),\n",
+       " (1.720833960703437, 85),\n",
+       " (1.4425175795094372, 86),\n",
+       " (1.965021755179159, 87),\n",
+       " (1.890716189999132, 88),\n",
+       " (1.678782875606201, 89),\n",
+       " (1.8911102917686902, 90),\n",
+       " (1.439526442887779, 91),\n",
+       " (1.9818245966563561, 92),\n",
+       " (1.8827945232273882, 93),\n",
+       " (1.9717744064585938, 94),\n",
+       " (1.420180467011402, 95),\n",
+       " (1.6326298664274737, 96),\n",
+       " (1.8270292658703433, 97),\n",
+       " (1.828787921553212, 98),\n",
+       " (1.7872503845057859, 99),\n",
+       " (1.5111612415468598, 100),\n",
+       " (1.8480257833615337, 101),\n",
+       " (1.7354096757776862, 102),\n",
+       " (1.8962797134842704, 103),\n",
+       " (1.371345213146439, 104),\n",
+       " (1.9077326754826396, 105),\n",
+       " (1.5689318698813783, 106),\n",
+       " (1.8229324514154421, 107),\n",
+       " (1.613757711105739, 108),\n",
+       " (1.6517564013242727, 109),\n",
+       " (1.4680161659345186, 110),\n",
+       " (1.7298143385817515, 111),\n",
+       " (1.6176909755323077, 112),\n",
+       " (1.3843831010708068, 113),\n",
+       " (1.6504770045242367, 114),\n",
+       " (1.549996546489146, 115),\n",
+       " (1.4559505845767322, 116),\n",
+       " (1.9363555047207628, 117),\n",
+       " (1.3366379333814553, 118),\n",
+       " (1.7474178519956287, 119),\n",
+       " (1.6769862963671514, 120),\n",
+       " (1.374024876241871, 121),\n",
+       " (1.4495109167069764, 122),\n",
+       " (1.341384945314593, 123),\n",
+       " (1.451756741148287, 124),\n",
+       " (1.8253931713529217, 125),\n",
+       " (1.6584792104914015, 126),\n",
+       " (1.9099922349303906, 127),\n",
+       " (1.8518528136442256, 128),\n",
+       " (1.607182450358246, 129),\n",
+       " (1.6378089624385772, 130),\n",
+       " (1.506536062718837, 131),\n",
+       " (1.6861626527313507, 132),\n",
+       " (1.8636465005583491, 133),\n",
+       " (1.5987865997706232, 134),\n",
+       " (1.9935288769301562, 135),\n",
+       " (1.620233138866317, 136),\n",
+       " (1.5377746358524242, 137),\n",
+       " (1.4398584459727823, 138),\n",
+       " (1.7283381699817384, 139),\n",
+       " (1.5047270657293803, 140),\n",
+       " (1.6175362985861557, 141),\n",
+       " (1.875849941411223, 142),\n",
+       " (1.3155820385777899, 143),\n",
+       " (1.5022707746072648, 144),\n",
+       " (1.4842144442976777, 145),\n",
+       " (1.7513280869768393, 146),\n",
+       " (1.2917148045155613, 147),\n",
+       " (1.4684373272965117, 148),\n",
+       " (1.8165666480371805, 149),\n",
+       " (1.8616834853855813, 150),\n",
+       " (1.9269171855497966, 151),\n",
+       " (2.071087853553978, 152),\n",
+       " (1.3645923283414405, 153),\n",
+       " (1.9729360599170394, 154),\n",
+       " (1.584471488429302, 155),\n",
+       " (1.391055301353491, 156),\n",
+       " (1.8031656245214034, 157),\n",
+       " (1.6432468063306307, 158),\n",
+       " (1.6804024296976143, 159),\n",
+       " (1.6448668454003956, 160),\n",
+       " (1.6597189854662537, 161),\n",
+       " (1.4674956023736605, 162),\n",
+       " (1.8601160927358635, 163),\n",
+       " (1.8190072197784197, 164),\n",
+       " (1.5931422951173477, 165),\n",
+       " (1.2037008625672843, 166),\n",
+       " (2.0762581750357776, 167),\n",
+       " (1.6870187118893722, 168),\n",
+       " (1.3880761455812423, 169),\n",
+       " (1.858915046608187, 170),\n",
+       " (1.3055922364912629, 171),\n",
+       " (1.3932472680438301, 172),\n",
+       " (1.7164954054256998, 173),\n",
+       " (1.9132078228175593, 174),\n",
+       " (1.176502643291474, 175),\n",
+       " (1.5064757390122039, 176),\n",
+       " (1.476418998976685, 177),\n",
+       " (1.4160623079283605, 178),\n",
+       " (2.0232075666811635, 179),\n",
+       " (1.8868844524815298, 180),\n",
+       " (1.7066017476006208, 181),\n",
+       " (1.780394789350001, 182),\n",
+       " (1.2627501419003837, 183),\n",
+       " (1.6283411390789446, 184),\n",
+       " (1.667761610283238, 185),\n",
+       " (1.7179494692537478, 186),\n",
+       " (1.70268419129528, 187),\n",
+       " (2.147332074031066, 188),\n",
+       " (1.7436918093527158, 189),\n",
+       " (1.8842811664925316, 190),\n",
+       " (1.6506390130426245, 191),\n",
+       " (1.7583533821653463, 192),\n",
+       " (1.705919937720231, 193),\n",
+       " (1.826982678469145, 194),\n",
+       " (1.6341543669214824, 195),\n",
+       " (1.3941603373027365, 196),\n",
+       " (1.6041775581658435, 197),\n",
+       " (1.6224360993719582, 198),\n",
+       " (1.8600676339519573, 199),\n",
+       " (1.8166177637780865, 200),\n",
+       " (1.5599686691825996, 201),\n",
+       " (1.7440852907441273, 202),\n",
+       " (1.8179337343270476, 203),\n",
+       " (1.5262308740420263, 204),\n",
+       " (2.0740241948588634, 205),\n",
+       " (2.2466688149011724, 206),\n",
+       " (1.912296179198943, 207),\n",
+       " (1.7373917505990675, 208),\n",
+       " (1.7041484100146085, 209),\n",
+       " (1.3600135666332849, 210),\n",
+       " (1.671856575668755, 211),\n",
+       " (1.7327715333882916, 212),\n",
+       " (1.7305703601679248, 213),\n",
+       " (1.8588512229219185, 214),\n",
+       " (1.5053751275374112, 215),\n",
+       " (1.8338186315016258, 216),\n",
+       " (2.0716870538828247, 217),\n",
+       " (1.9904440345284617, 218),\n",
+       " (2.034273102247534, 219),\n",
+       " (1.3343143234334995, 220),\n",
+       " (1.6945988722340697, 221),\n",
+       " (1.558025478955683, 222),\n",
+       " (1.3018187005674404, 223),\n",
+       " (1.7338670381118093, 224),\n",
+       " (1.3276665796044058, 225),\n",
+       " (1.4325479783667676, 226),\n",
+       " (1.2689708074949977, 227),\n",
+       " (1.2236250709919838, 228),\n",
+       " (1.687842576077246, 229),\n",
+       " (1.3165877570866917, 230),\n",
+       " (1.3714870105625176, 231),\n",
+       " (1.5211301810856666, 232),\n",
+       " (1.4124011594138761, 233),\n",
+       " (1.750739160607751, 234),\n",
+       " (1.788799568686518, 235),\n",
+       " (1.97831352406185, 236),\n",
+       " (1.5771046084203408, 237),\n",
+       " (1.5956727817127354, 238),\n",
+       " (1.3816886513540438, 239),\n",
+       " (1.6031005268840355, 240),\n",
+       " (1.4735596804950595, 241),\n",
+       " (1.7361475698694182, 242),\n",
+       " (1.925859249219691, 243),\n",
+       " (1.3186168531395976, 244),\n",
+       " (1.4747679918520151, 245),\n",
+       " (1.459435098858297, 246),\n",
+       " (1.2633008999841064, 247),\n",
+       " (1.6764812310611634, 248),\n",
+       " (1.7563221257626391, 249),\n",
+       " (1.5020028305600805, 250),\n",
+       " (1.559184164320863, 251),\n",
+       " (1.5898528461856718, 252),\n",
+       " (1.356983734666732, 253),\n",
+       " (1.8937804356057182, 254),\n",
+       " (1.9198206154064097, 255),\n",
+       " (1.6543335924746758, 256),\n",
+       " (1.3143072884637677, 257),\n",
+       " (1.534211770784158, 258),\n",
+       " (1.3643168648402446, 259),\n",
+       " (1.8345120579727432, 260),\n",
+       " (1.5465896068912912, 261),\n",
+       " (1.23595881387263, 262),\n",
+       " (1.6911829160193688, 263),\n",
+       " (1.6099420252984533, 264),\n",
+       " (1.4572675619913642, 265),\n",
+       " (1.9434910762100646, 266),\n",
+       " (1.5780388921483228, 267),\n",
+       " (1.479740879522762, 268),\n",
+       " (1.5892710928589922, 269),\n",
+       " (1.823435313472496, 270),\n",
+       " (1.7232902990831502, 271),\n",
+       " (1.8627538660985712, 272),\n",
+       " (1.5892782831424588, 273),\n",
+       " (1.5218830711264995, 274),\n",
+       " (1.55420557404453, 275),\n",
+       " (1.4954848303932966, 276),\n",
+       " (1.7274720584974317, 277),\n",
+       " (1.7888167950928124, 278),\n",
+       " (1.8804414953927884, 279),\n",
+       " (1.3694095114860647, 280),\n",
+       " (1.550839569810674, 281),\n",
+       " (1.719384737992366, 282),\n",
+       " (1.620635804008202, 283),\n",
+       " (1.6056835425875156, 284),\n",
+       " (1.5931194225747916, 285),\n",
+       " (1.6951867703022283, 286),\n",
+       " (1.5766008895274226, 287),\n",
+       " (1.561232683342811, 288),\n",
+       " (1.3851694649014754, 289),\n",
+       " (1.6699736506926348, 290),\n",
+       " (1.5660994389207759, 291),\n",
+       " (1.898332208210062, 292),\n",
+       " (1.325312244590026, 293),\n",
+       " (1.9706855667181902, 294),\n",
+       " (1.845765391453763, 295),\n",
+       " (1.394716456912428, 296),\n",
+       " (1.475831288086589, 297),\n",
+       " (1.5252692774533154, 298),\n",
+       " (1.6211569410706057, 299),\n",
+       " (1.694950882667679, 300),\n",
+       " (1.3924666145082103, 301),\n",
+       " (1.8035899476242347, 302),\n",
+       " (1.382883102851902, 303),\n",
+       " (1.6431845050947573, 304),\n",
+       " (1.490103366534259, 305),\n",
+       " (1.2957144548142587, 306)]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mvms[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.176502643291474, 175)"
+      ]
+     },
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "min(mvms[0], key=lambda t:t[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "key1=filter(lambda b: b<, mvms[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<filter at 0xffff6973ed00>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "KEY2"
    ]
   },
   {
